log/build_2025-08-07_20-51-15/my_robot_python/stderr.log
  File "/home/vincent-pc/ros2_jazzy/install/my_robot_python/lib/python3.12/site-packages/my_robot_python/my_robot.py", line 14
    self.counter1 + =1
                    ^
SyntaxError: invalid syntax

